解决未存储params的bug